# NativeDisplayManager

./: CMakeLists.txt  Doxyfile  LICENSE  README.md  W32Display.sln  W32Display.vcxproj  W32Display.vcxproj.filters  build-win32-display-test.json  build-win32-monitor-test.json
doc/docbook/: annotated.xml  class_native_display_manager_1_1_display.xml  display_8hpp_source.xml  index.xml  monitor_8hpp_source.xml  os__defines_8hpp_source.xml  struct_native_display_manager_1_1_display_events.xml  struct_native_display_manager_1_1_monitor_info.xml
doc/html/: a00002.html  a00002_source.html  a00005.html  a00005_source.html  a00008.html  a00008_source.html  a00011.html  a00012.html  a00015.html  a00016.html  a00019.html  a00020.html  a00023.html  annotated.html  annotated_dup.js  class_native_display_manager_1_1_display-members.html  class_native_display_manager_1_1_display.html  class_native_display_manager_1_1_display.js  class_native_display_manager_1_1_display_a03aa78b95bfffcadbef39e2afb63c63a.html  class_native_display_manager_1_1_display_a0946a103227630284d23e14c297c3058.html  class_native_display_manager_1_1_display_a181be870f1f01e73e13f6692e2cdb55a.html  class_native_display_manager_1_1_display_a421bee7a0b18359adb2e009668a0b34d.html  class_native_display_manager_1_1_display_a430698ccf52ead866111259c84f0449f.html  class_native_display_manager_1_1_display_a4319cd1e3c3ef469119ed7da57f5b60b.html  class_native_display_manager_1_1_display_a4c52a2b884c0b06afcb720a50735cf96.html  class_native_display_manager_1_1_display_a4cc9c3270443f3577cf8969eea4e5ccf.html  class_native_display_manager_1_1_display_a4cd7d842644296a04e13e128b7c7f349.html  class_native_display_manager_1_1_display_a53e98852715f558dee5c800c11d71625.html  class_native_display_manager_1_1_display_a5af22307e0d39325ac1de0ea7ae39ce9.html  class_native_display_manager_1_1_display_a5cc94280f5844260a45e75b638d26431.html  class_native_display_manager_1_1_display_a60c059722792d1bd7d16a3e4a5d2cc93.html  class_native_display_manager_1_1_display_a60c77c5d34b5cc57970fce11abbe8fbe.html  class_native_display_manager_1_1_display_a66f41dfd8430fa1574f6eb2d2d0bae92.html  class_native_display_manager_1_1_display_a70df3bb748a7057c496aa10152f39b23.html  class_native_display_manager_1_1_display_a733fa82d2fdeef5022b9704abaf98f6a.html  class_native_display_manager_1_1_display_a7c6f0c75de7c56cb93b3398748f37cce.html  class_native_display_manager_1_1_display_a82c5ba98fe6191b918a51b80b0457229.html  class_native_display_manager_1_1_display_a89ad0bf3fbc56f882b2c9882f17988aa.html  class_native_display_manager_1_1_display_a8fb12f5458845b50d3cbe45b3a31201f.html  class_native_display_manager_1_1_display_a8fee8d5c3bd59173542da741a100ec9f.html  (+78 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_6.js  all_7.js  all_b.js  all_d.js  classes_0.js  classes_1.js  files_0.js  files_1.js  files_2.js  functions_2.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_b.js  namespaces_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js
doc/man/man3/: NativeDisplayManager_Display.3  NativeDisplayManager_DisplayEvents.3  NativeDisplayManager_MonitorInfo.3
doc/rtf/: refman.rtf
doc/xml/: Doxyfile.xml  class_native_display_manager_1_1_display.xml  dir_09e761304027c904456130627fd4dcf5.xml  dir_ba931fd68ff633a65e2cacd19cf76731.xml  display_8hpp.xml  index.xml  monitor_8hpp.xml  namespace_native_display_manager.xml  os__defines_8hpp.xml  struct_native_display_manager_1_1_display_events.xml  struct_native_display_manager_1_1_monitor_info.xml
include/: display.hpp  w32_display.hpp
includes/: display.hpp  display_events.hpp
includes/ndm/: display.hpp  monitor.hpp  ndm_utils.hpp  os_defines.hpp
includes/ndm/display/: display.hpp  display_events.hpp  display_mode.hpp
includes/ndm/monitor/: monitor.hpp  monitor_capabilities.hpp
includes/ndm/opengl/: gl_context.hpp  gl_context_params.hpp  gl_context_profile.hpp
includes/ndm/os/: win32_functions.hpp
sources/: win32_display_impl.cpp  win32_monitor_impl.cpp  xlib_display_impl.cpp
sources/display/: win32_display_impl.cpp  x11_display_impl.cpp
sources/monitor/: win32_monitor_impl.cpp
sources/opengl/: win32_glcontext_impl.cpp
tests/: opengl_test.cpp  win32_display_test.cpp  win32_monitor_test.cpp  win32_opengl_test.cpp  xlib_opengl_test.cpp
